# whisper-guard

./: AGENTS.md  CHANGELOG.md  CODEX_HANDOVER.md  LICENSE  README.md  pyproject.toml
tests/: test_guard.py  test_vocab.py
whisper_guard/: __init__.py  guard.py  vocab.py
